--- a/templates/galeria/nova_imagem.html
+++ b/templates/galeria/nova_imagem.html
@@ -2,8 +2,8 @@
 {% load static %}
 {% block content %}
 
-            <section class="galeria" style="margin-left: 4em">
-                <form action="{% url 'cadastro'%}" method="POST">
+            <section class="galeria" style="margin-left: 5em">
+                <form action="{% url 'nova_imagem' %}" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <div class="row">
                         {% for field in form.visible_fields %}
@@ -11,17 +11,11 @@
                             <label for="{{ field.id_for_label }}" style="color:#D9D9D9; margin-bottom: 5px;">{{field.label}}</label>
                             {{ field }}
                         </div>
-                        {% for error in field.errors %}
-                            <div class="alert alert-danger"> 
-                                {{error}}
-                            </div>
-                        {% endfor %}
                         {% endfor %}
                     </div>
                     <div>
-                        <button class="btn btn-success col-12" style="padding: top 5px;">Cadastrar</button>
+                        <button type="submit" class="btn btn-success col-12" style="padding: top 5px;">Cadastrar Nova Fotografia</button>
                     </div>
-                   
                 </form>
             </section>
         </main>
